--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,10 +23,10 @@
   <div class="row">
     <div class="col-10 offset-1">
       <div class="markdown-container font-medium secondary-text bg-gray-800 p-5 text-gray-300 rounded-xl ps-5 pe-5">
-        You are currently on the home page. Showing content of file <a class="text-blue-500">HOME.md</a> 🎉
+        You are currently on the home page. Showing content of file <a class="text-blue-500">README.md</a> 🎉
         <br>
         Are you unhappy with the results? Feel free to contribute on our <a class="text-blue-500">Github</a> 🙃
-        <markdown src="https://raw.githubusercontent.com/whatonearth-xyz/search-results/main/home.md"></markdown>
+        <markdown src="https://raw.githubusercontent.com/whatonearth-xyz/search-results/main/README.md"></markdown>
       </div>
     </div>
   </div>
@@ -35,7 +35,7 @@
 
 <div class="text-center secondary-text mt-1 mb-5">
   <svg class="h-4 w-4 text-white-500 d-inline mb-1 me-1"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <path d="M14 3v4a1 1 0 0 0 1 1h4" />  <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" /></svg>
-  <span>HOME.md</span>
+  <span>README.md</span>
 </div>
 
 
