--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
         You are currently on the home page. Showing content of file <a class="text-blue-500">README.md</a> 🎉
         <br>
         Are you unhappy with the results? Feel free to contribute on our <a class="text-blue-500">Github</a> 🙃
-        <markdown src="https://raw.githubusercontent.com/whatonearth-xyz/search-results/main/README.md"></markdown>
+        <markdown src="https://raw.githubusercontent.com/whatonearth-xyz/search-results/main/README.md?v={{randomNumber}}"></markdown>
       </div>
     </div>
   </div>
