Fix markdown on homepage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-10 offset-1">
+    <div class="col-md-10 offset-md-1">
       <div class="markdown-container font-medium secondary-text bg-gray-800 p-5 text-gray-300 rounded-xl ps-md-5 pe-md-5">
         You are currently on the home page. Showing content of file <a class="text-blue-500">README.md</a> 🎉
         <br>
