--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,10 +22,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-10 offset-md-1">
-      <div class="markdown-container font-medium secondary-text bg-gray-800 p-5 text-gray-300 rounded-xl ps-md-5 pe-md-5">
-        You are currently on the home page. Showing content of file <a class="text-blue-500">README.md</a> 🎉
+      <div class="markdown-container font-medium secondary-text bg-gray-800 p-3 p-md-5 text-gray-300 rounded-xl">
+        You are currently on the home page. Showing content of file <a href="https://github.com/whatonearth-xyz/search-results/blob/main/README.md" class="text-blue-500">README.md</a> 🎉
         <br>
-        Are you unhappy with the results? Feel free to contribute on our <a class="text-blue-500">Github</a> 🙃
+        Are you unhappy with the results? Feel free to contribute on our <a href="https://github.com/whatonearth-xyz" class="text-blue-500">Github</a> 🙃
         <markdown src="https://raw.githubusercontent.com/whatonearth-xyz/search-results/main/README.md?v={{randomNumber}}"></markdown>
       </div>
     </div>
