--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,9 +38,10 @@
   <span>README.md</span>
 </div>
 
+<br>
 
 
-<div class="bg-gray-800 mt-5 pt-5 pb-5">
+<div class="bg-gray-800 mt-md-5 pt-5 pb-5">
   <div class="container">
     <br>
     <div class="row d-flex align-items-center">
