Adding search + styling changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,111 +1,2 @@
-<div class="container pt-5 pb-5">
-  <div class="text-4xl font-extrabold text-center">:: whaton🌎 ::</div>
-</div>
-
-<div class="container pb-lg-4">
-  <div class="row mt-4 mb-5 d-flex justify-content-center">
-    <div class="col-12 mb-3">
-      <div class="mt-xl-5 font-extrabold text-3xl xl:text-5xl text-center">The first <span class="font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-purple-400 fit-content">#Web3</span> Search Directory 🦄🌈</div>
-    </div>
-    <div class="row pt-2">
-      <div class="col-12 col-xl-6 offset-xl-2 xl:text-2xl">
-        <input autofocus class="graybg p-3" type="text" placeholder="Ex. What on earth is web3 🤔">
-      </div>
-      <div class="col-6 offset-3 offset-xl-0 col-xl-2 xl:text-xl d-flex mt-3 mt-xl-0">
-        <button class="bg-gradient-to-r from-teal-400 to-purple-400 p-3 text-white font-extrabold">Search</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-10 offset-md-1">
-      <div class="markdown-container font-medium secondary-text bg-gray-800 p-4 p-md-5 text-gray-300 rounded-xl">
-        You are currently on the home page. Showing content of file <a href="https://github.com/whatonearth-xyz/search-results/blob/main/README.md" class="text-blue-500">README.md</a> 🎉
-        <br>
-        Are you unhappy with the results? Feel free to contribute on our <a href="https://github.com/whatonearth-xyz" class="text-blue-500">Github</a> 🙃
-        <markdown src="https://raw.githubusercontent.com/whatonearth-xyz/search-results/main/README.md?v={{randomNumber}}"></markdown>
-      </div>
-    </div>
-  </div>
-  
-</div>
-
-<div class="text-center secondary-text mt-1 mb-5">
-  <svg class="h-4 w-4 text-white-500 d-inline mb-1 me-1"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <path d="M14 3v4a1 1 0 0 0 1 1h4" />  <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" /></svg>
-  <span>README.md</span>
-</div>
-
-<br>
-
-
-<div class="bg-gray-800 mt-md-5 pt-5 pb-5">
-  <div class="container">
-    <br>
-    <div class="row d-flex align-items-center">
-      <div class="col-10 offset-1">
-        <div class="row d-flex align-items-center">
-          <div class="col-12 col-xl-6 p-1 p-xl-3 text-center p-xl-4">
-            <div class="font-extrabold text-3xl xl:text-5xl"><span class="font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-purple-400 fit-content">Open-Source</span> & Free</div>
-            <div class="secondary-text mt-2">whaton🌎 is completely open source and free to use.</div>
-            <div class="text-center mt-4">
-              <button class="bg-gradient-to-r from-teal-400 to-purple-400 p-3 ps-5 pe-5 text-white font-extrabold fit-content">Contribute on Github</button>
-            </div>
-          </div>
-          <div class="col-12 col-xl-4 offset-xl-1 d-flex justify-content-center mt-3 mt-xl-0">
-            <blockquote data-theme="dark" class="twitter-tweet"><p lang="en" dir="ltr">Search engines should open source their ranking algorithms.</p>&mdash; cdixon.eth (@cdixon) <a href="https://twitter.com/cdixon/status/1501717269117915140?ref_src=twsrc%5Etfw">March 10, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-          </div>
-        </div>
-      </div>
-    </div>
-    <br>
-  </div>
-</div>
-<div class="container mt-5 mb-5">
-  <br>
-  <div class="row d-flex align-items-center">
-    <div class="col-10 offset-1">
-      <div class="row d-flex align-items-center">
-        <div class="col-12 col-xl-4 offset-xl-1 order-2 order-xl-1 d-flex justify-content-center mt-3 mt-xl-0">
-          <blockquote data-theme="dark" class="twitter-tweet"><p lang="en" dir="ltr">Has anyone seen web3? I can’t find it.</p>&mdash; Elon Musk (@elonmusk) <a href="https://twitter.com/elonmusk/status/1473165434518224896?ref_src=twsrc%5Etfw">December 21, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
-        <div class="col-12 col-xl-6 offset-xl-1 p-1 p-xl-3 text-center p-xl-4 order-1 order-xl-2">
-          <div class="font-extrabold text-3xl xl:text-5xl"><span class="font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-purple-400 fit-content">Learn Web3</span> Daily</div>
-          <div class="secondary-text mt-2">Subscribe to whaton🌎's #Web3 newsletter.</div>
-          <div class="row mt-4 d-flex align-items-center">
-            <div class="col-12 col-xl-8 xl:text-xl">
-              <input class="graybg p-2" type="text" placeholder="Your Email Address">
-            </div>
-            <div class="col-6 offset-3 offset-xl-0 col-xl-4 mt-3 mt-xl-0">
-              <button class="bg-gradient-to-r from-teal-400 to-purple-400 p-3 text-white font-extrabold">Subscribe</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <br>
-</div>
-<div class="bg-gray-800 pt-5 pb-5">
-  <br>
-  <div class="container">
-    <div class="row d-flex align-items-center">
-      <div class="col-10 offset-1">
-        <div class="row d-flex align-items-center">
-          <div class="col-12 col-xl-6 p-1 p-xl-3 text-center p-xl-4">
-            <div class="font-extrabold text-3xl xl:text-5xl"><span class="font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-purple-400 fit-content">Unbiased</span> & Safe</div>
-            <div class="secondary-text mt-2">whaton🌎 is an unbiased platform, we let the users take decisions of their own.</div>
-          </div>
-          <div class="col-12 col-xl-4 offset-xl-1 d-flex justify-content-center mt-3 mt-xl-0">
-            <blockquote data-theme="dark" class="twitter-tweet"><p lang="en" dir="ltr">Looking for unbiased but educated takes on Web3.</p>&mdash; naklecha.eth (🛠️, 🌈) (@naklecha) <a href="https://twitter.com/naklecha/status/1502040754239447040?ref_src=twsrc%5Etfw">March 10, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <br>
-</div>
-
-<div class="text-center mb-5 mt-5 secondary-text">gm@whatonearth.xyz</div>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
