--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
     <div class="row">
         <div class="col-md-10 offset-md-1">
         <div class="markdown-container font-medium secondary-text bg-gray-800 p-4 p-md-5 text-gray-300 rounded-xl">
-            You are currently on the home page and viewing the file <a href="https://github.com/whatonearth-xyz/search-results/blob/main/README.md" class="text-blue-500">README.md</a> 🎉
+            Currently viewing the file <a href="https://github.com/whatonearth-xyz/search-results/blob/main/README.md" class="text-blue-500">README.md</a> 🎉
             <br>
             Are you unhappy with the results? Feel free to contribute on our <a href="https://github.com/whatonearth-xyz" class="text-blue-500">Github</a> 🙃
             <markdown src="https://raw.githubusercontent.com/whatonearth-xyz/search-results/main/README.md?v={{randomNumber}}"></markdown>
