--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
         <div class="markdown-container font-medium secondary-text bg-gray-800 p-4 p-md-5 text-gray-300 rounded-xl">
             Currently viewing the file <a href="https://github.com/whatonearth-xyz/search-results/blob/main/README.md" class="text-blue-500">README.md</a> 🎉
             <br>
-            Are you unhappy with the results? Feel free to contribute on our <a href="https://github.com/whatonearth-xyz" class="text-blue-500">Github</a> 🙃
+            Feel free to contribute on our <a href="https://github.com/whatonearth-xyz" class="text-blue-500">Github</a> 🙃
             <markdown src="https://raw.githubusercontent.com/whatonearth-xyz/search-results/main/README.md?v={{randomNumber}}"></markdown>
         </div>
         </div>
