--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="container pt-5 pb-5">
-    <div class="text-4xl font-extrabold text-center">
+    <div class="text-2xl md:text-4xl font-extrabold text-center">
         <a href="/">:: whaton🌎 ::</a>  
     </div>
 </div>
