Update homepage to buildspace

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -45,16 +45,18 @@
         <div class="row d-flex align-items-center">
         <div class="col-10 offset-1">
             <div class="row d-flex align-items-center">
-            <div class="col-12 col-xl-6 p-1 p-xl-3 text-center p-xl-4">
-                <div class="font-extrabold text-3xl xl:text-5xl"><span class="font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-green-400 fit-content">Open-Source</span> & Free</div>
-                <div class="secondary-text mt-2">whaton🌎 is completely open source and free to use.</div>
-                <div class="text-center mt-4">
-                <button class="bg-gradient-to-r from-teal-400 to-green-400 p-3 ps-5 pe-5 text-white font-thin fit-content">Contribute on Github</button>
+                <div class="col-12 col-xl-6 p-1 p-xl-3 text-center p-xl-4">
+                    <div class="font-extrabold text-3xl xl:text-5xl"><span class="font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-green-400 fit-content">Open-Source</span> & Free</div>
+                    <div class="secondary-text mt-2">whaton🌎 is completely open source and free to use.</div>
+                    <div class="text-center mt-4">
+                        <a href="https://github.com/whatonearth-xyz">
+                            <button class="bg-gradient-to-r from-teal-400 to-green-400 p-3 ps-5 pe-5 text-white font-thin fit-content">Contribute on Github</button>
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="col-12 col-xl-4 offset-xl-1 d-flex justify-content-center mt-3 mt-xl-0">
-                <blockquote data-theme="dark" class="twitter-tweet"><p lang="en" dir="ltr">Search engines should open source their ranking algorithms.</p>&mdash; cdixon.eth (@cdixon) <a href="https://twitter.com/cdixon/status/1501717269117915140?ref_src=twsrc%5Etfw">March 10, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </div>
+                <div class="col-12 col-xl-4 offset-xl-1 d-flex justify-content-center mt-3 mt-xl-0">
+                    <blockquote data-theme="dark" class="twitter-tweet"><p lang="en" dir="ltr">Search engines should open source their ranking algorithms.</p>&mdash; cdixon.eth (@cdixon) <a href="https://twitter.com/cdixon/status/1501717269117915140?ref_src=twsrc%5Etfw">March 10, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
             </div>
         </div>
         </div>
@@ -67,19 +69,19 @@
         <div class="col-10 offset-1">
         <div class="row d-flex align-items-center">
             <div class="col-12 col-xl-4 offset-xl-1 order-2 order-xl-1 d-flex justify-content-center mt-3 mt-xl-0">
-            <blockquote data-theme="dark" class="twitter-tweet"><p lang="en" dir="ltr">Has anyone seen web3? I can’t find it.</p>&mdash; Elon Musk (@elonmusk) <a href="https://twitter.com/elonmusk/status/1473165434518224896?ref_src=twsrc%5Etfw">December 21, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <!-- <blockquote data-theme="dark" class="twitter-tweet"><p lang="en" dir="ltr">Has anyone seen web3? I can’t find it.</p>&mdash; Elon Musk (@elonmusk) <a href="https://twitter.com/elonmusk/status/1473165434518224896?ref_src=twsrc%5Etfw">December 21, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
+                <blockquote data-theme="dark" class="twitter-tweet"><p lang="en" dir="ltr">&quot;If one more person calls buildspace a course I will officially lose it.&quot;<br><br>- Farza (Nov 19, 2021)</p>&mdash; buildspace (@_buildspace) <a href="https://twitter.com/_buildspace/status/1461841459741704199?ref_src=twsrc%5Etfw">November 19, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
             <div class="col-12 col-xl-6 offset-xl-1 p-1 p-xl-3 text-center p-xl-4 order-1 order-xl-2">
-            <div class="font-extrabold text-3xl xl:text-5xl"><span class="font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-green-400 fit-content">Learn Web3</span> Daily</div>
-            <div class="secondary-text mt-2">Subscribe to whaton🌎's #Web3 newsletter.</div>
-            <div class="row mt-4 d-flex align-items-center">
-                <div class="col-12 col-xl-8 xl:text-xl">
-                <input class="graybg p-2" type="text" placeholder="Your Email Address">
+                <div class="font-extrabold text-3xl xl:text-5xl">By <span class="font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-green-400 fit-content">Buildspace</span> Alumni</div>
+                <div class="secondary-text mt-2">whaton🌎 was built by the alumni network at <a class="text-blue-400" href="https://buildspace.so">buildspace</a> 🦄</div>
+                <div class="row mt-4 d-flex align-items-center">
+                    <div class="text-center">
+                        <a href="https://discord.com/invite/buildspace">
+                            <button class="bg-gradient-to-r from-teal-400 to-green-400 p-3 ps-5 pe-5 text-white font-thin fit-content">Join our Discord</button>
+                        </a>
+                    </div>
                 </div>
-                <div class="col-6 offset-3 offset-xl-0 col-xl-4 mt-3 mt-xl-0">
-                <button class="bg-gradient-to-r from-teal-400 to-green-400 p-3 text-white font-thin">Subscribe</button>
-                </div>
-            </div>
             </div>
         </div>
         </div>
@@ -92,13 +94,13 @@
         <div class="row d-flex align-items-center">
         <div class="col-10 offset-1">
             <div class="row d-flex align-items-center">
-            <div class="col-12 col-xl-6 p-1 p-xl-3 text-center p-xl-4">
-                <div class="font-extrabold text-3xl xl:text-5xl"><span class="font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-green-400 fit-content">Unbiased</span> & Safe</div>
-                <div class="secondary-text mt-2">whaton🌎 is an unbiased platform, we let the users take decisions of their own.</div>
-            </div>
-            <div class="col-12 col-xl-4 offset-xl-1 d-flex justify-content-center mt-3 mt-xl-0">
-                <blockquote data-theme="dark" class="twitter-tweet"><p lang="en" dir="ltr">Looking for unbiased but educated takes on Web3.</p>&mdash; naklecha.eth (🛠️, 🌈) (@naklecha) <a href="https://twitter.com/naklecha/status/1502040754239447040?ref_src=twsrc%5Etfw">March 10, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </div>
+                <div class="col-12 col-xl-6 p-1 p-xl-3 text-center p-xl-4">
+                    <div class="font-extrabold text-3xl xl:text-5xl"><span class="font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-green-400 fit-content">Unbiased</span> & Safe</div>
+                    <div class="secondary-text mt-2">whaton🌎 is an unbiased platform, we let the users take decisions of their own.</div>
+                </div>
+                <div class="col-12 col-xl-4 offset-xl-1 d-flex justify-content-center mt-3 mt-xl-0">
+                    <blockquote data-theme="dark" class="twitter-tweet"><p lang="en" dir="ltr">Looking for unbiased but educated takes on Web3.</p>&mdash; naklecha.eth (🛠️, 🌈) (@naklecha) <a href="https://twitter.com/naklecha/status/1502040754239447040?ref_src=twsrc%5Etfw">March 10, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
             </div>
         </div>
         </div>
